<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rahulraghuwanshi.authflow.fragment.auth.AuthViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?colorPrimary"
            tools:context=".fragment.auth.LoginFragment">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_auth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/auth_background"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_logo">

                <TextView
                    android:id="@+id/txt_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/enter_your_mobile_number"
                    android:textColor="@color/purple_200"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/ll_number"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/et_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_mobile">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/country_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:ccp_showFlag="false"
                        app:ccp_showNameCode="false" />

                    <EditText
                        android:id="@+id/et_number"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_weight="1"
                        android:autofillHints="phone"
                        android:background="@android:color/transparent"
                        android:hint="@string/_123467890"
                        android:inputType="number"
                        android:text="@={viewModel.number}" />

                </LinearLayout>

                <TextView
                    android:id="@+id/btn_send_otp"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_bg"
                    android:backgroundTint="@color/purple_200"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onSendOTPButtonClick()}"
                    android:text="@string/get_otp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_number" />


                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_send_otp">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/or" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/et_bg"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onGoogleLoginButtonClick()}"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@color/purple_200"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_google"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/i_agree_to_receive_important_updates_via_whatsapp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/by_continuing_i_accept_terms_amp_conditions_and_privacy_policy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>