<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rahulraghuwanshi.authflow.fragment.auth.AuthViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?colorPrimary"
            tools:context=".fragment.auth.OTPVerifyFragment">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_auth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/auth_background"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_logo">

                <TextView
                    android:id="@+id/txt_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/enter_otp_sent_to"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:drawablePadding="8dp"
                    android:onClick="@{() -> viewModel.onEditPhoneClick()}"
                    android:text="@string/_91_9535312918"
                    android:textColor="#2562B4"
                    app:drawableEndCompat="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_otp" />


                <LinearLayout
                    android:id="@+id/ll_number"
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/et_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_number">

                    <EditText
                        android:id="@+id/et_number"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_weight="1"
                        android:autofillHints="phone"
                        android:background="@android:color/transparent"
                        android:hint="@string/_123456"
                        android:inputType="number"
                        android:maxLength="6"
                        android:paddingStart="76dp"
                        android:paddingEnd="76dp"
                        android:text="@={viewModel.otp}" />

                </LinearLayout>

                <TextView
                    android:id="@+id/btn_send_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_bg"
                    android:backgroundTint="@color/purple_200"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onVerifyOTPButtonClick()}"
                    android:paddingStart="76dp"
                    android:paddingEnd="76dp"
                    android:text="@string/verify"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>